--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "crypto": "^1.0.1",
     "firebase": "^9.15.0",
     "firebasets": "^1.2.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "unique-username-generator": "^1.1.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -39,5 +41,8 @@
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.7.2"
+  },
+  "browser": {
+    "crypto": false
   }
 }
