changes to environment and buildspec to hopefully work

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,7 @@
 version: 0.2
-
+env:
+  variables:
+    APP_NAME: "social-media-angular"
 phases:
   install:
     runtime-versions:
@@ -14,7 +16,8 @@ phases:
       - ng build --configuration=production
   post_build:
     commands:
-      - echo build process finished, we should uplload to S3 now
+      - echo build process finished, we should upload to S3 now
       - cd dist/$APP_NAME
       - ls -la
-      - aws s3 sync . s3://my-awsome-bucket-of-files --delete
+      - aws s3 sync . s3://highscoreio-frontend-bucket
+        --delete
