--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
   build:
     commands:
       - echo build process started now
-#      - ng test --no-watch
+      - ng test --no-watch
       - ng build --configuration=production
   post_build:
     commands:
