--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "crypto": "^1.0.1",
+    "express": "^4.18.2",
     "firebase": "^9.15.0",
     "firebasets": "^1.2.13",
     "rxjs": "~7.5.0",
