--- a/package.json
+++ b/package.json
@@ -21,11 +21,19 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@types/node": "^18.11.18",
+    "axios": "^1.2.2",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase": "^9.15.0",
     "firebasets": "^1.2.13",
     "rxjs": "~7.5.0",
+    "stream-chat": "^8.2.1",
+    "stream-chat-angular": "^4.12.1",
     "tslib": "^2.3.0",
     "unique-username-generator": "^1.1.3",
     "zone.js": "~0.11.4"
