--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "firebase": "^9.15.0",
     "firebasets": "^1.2.13",
     "rxjs": "~7.5.0",
+    "socket.io-client": "^4.5.4",
     "stream-chat": "^8.2.1",
     "stream-chat-angular": "^4.12.1",
     "tslib": "^2.3.0",
