--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,16 +7,26 @@ phases:
     runtime-versions:
       nodejs: 16.x
     commands:
-      - echo install process started
       - npm install && npm install -g @angular/cli
+
+      - npm i -D puppeteer
+      - npm i –D @angular-devkit/build-angular
+      - apt-get upgrade
+      - apt-get update
+      - apt-get install -y apt-transport-https
+      - apt-get install -y libxcursor1
+      - apt-get install -y libgtk-3-dev
+      - apt-get install -y libxss1
+      - apt-get install -y libasound2
+      - apt-get install -y libnspr4
+      - apt-get install -y libnss3
+      - apt-get install -y libx11-xcb1
+      - npm install
   build:
     commands:
-      - echo build process started now
-      - ng test --no-watch
       - ng build --configuration=production
+      - ng test --no-watch
   post_build:
     commands:
-      - echo build process finished, we should upload to S3 now
       - cd dist/$APP_NAME
-      - ls -la
       - aws s3 sync . s3://highscoreio-frontend-bucket/ --delete
