--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,7 +25,7 @@ phases:
   build:
     commands:
       - ng build --configuration=production
-      - ng test --no-watch
+#      - ng test --no-watch
   post_build:
     commands:
       - cd dist/$APP_NAME
